@@ -1,6 +1,13 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2
 
+  12 Jan 2006; Roy Marples <uberlord@gentoo.org>:
+
+    Interactive start is now controllable by RC_INTERACTIVE="yes" and will
+    probe to see if we can go interactive.
+
+    Interactive start should now work on Sparc, #104067.
+
   11 Jan 2006; Roy Marples <uberlord@gentoo.org>:
 
     runscript.sh now traps interrupt signals and rolls back its status to what
